# neuromem

./: .coveragerc  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml  requirements.txt  setup.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-npm.yml  publish-pypi.yml
docs/: index.html
examples/: example_agent_loop.py  example_python_basic.py  example_typescript_basic.ts  observability_example.py
neuromem/: __init__.py  context_manager.py  observability.py  pruner.py  scorer.py  summarizer.py  token_counter.py
neuromem/integrations/: __init__.py  anthropic.py  crewai.py  langchain.py  llamaindex.py  openai.py
tests/: test_context_manager.py  test_coverage_edges.py  test_integrations.py  test_observability.py  test_pruner.py  test_scorer.py  test_summarizer.py  test_token_counter.py
typescript/: package.json  tsconfig.json
typescript/src/: contextManager.ts  index.ts  observability.ts  pruner.ts  scorer.ts  summarizer.ts
typescript/src/integrations/: openai.ts
